fix: auth调用go-matrix工具
